--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 Django==2.0.1
+django-filter==1.1.0
 django-common-helpers==0.9.1
+djangorestframework==3.7.7
 kombu==4.1.0
+Markdown==2.6.11
 psycopg2==2.7.3.2
 pytz==2017.3
+vine==1.1.4
